<?xml version="1.0"?>
<package>
  <name>uvc_streaming</name>
  <version>1.0.0</version>
  <description>The uvc_streaming package</description>
  <maintainer email="kevin970401@gmail.com">gunjun</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <export>
  </export>
</package>
